# Video2Audio

./: .gitignore  README.md  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.portable.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsh
src-tauri/scripts/: build-portable.ps1  setup-cert.ps1  sign.ps1
src-tauri/src/: convert.rs  dialog.rs  ffmpeg.rs  main.rs  media.rs  process.rs
