[package]
name = "video2audio"
version = "1.0.0"
edition = "2021"

[features]
devtools = ["tauri/devtools"]
portable = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }
